# traversablity_estimation_net

./: .gitignore  CMakeLists.txt  README.md  package.xml
data_imu/raw/test/: 03_54_10_060.pcd  03_54_18_080.pcd  03_54_18_080.txt  03_54_32_080.pcd  03_54_32_080.txt  03_54_43_080.pcd  03_54_43_080.txt  03_54_53_100.pcd  03_54_53_100.txt  03_55_17_080.pcd  03_55_17_080.txt  03_55_21_080.pcd  03_55_21_080.txt  03_56_15_060.pcd  03_56_15_060.txt  03_56_18_060.pcd  03_56_18_060.txt  03_56_23_060.pcd  03_56_23_060.txt  03_56_27_060.pcd  03_56_27_060.txt  03_57_08_020.pcd  03_57_08_020.txt  03_57_19_000.pcd  03_57_19_000.txt  03_57_20_020.pcd  03_57_20_020.txt  03_57_30_020.pcd  03_57_30_020.txt  03_57_38_040.pcd  03_57_38_040.txt  03_57_52_040.pcd  03_57_52_040.txt  03_58_21_040.pcd  03_58_21_040.txt  03_58_22_040.txt  03_58_27_040.pcd  03_58_27_040.txt  03_58_56_020.pcd  03_58_56_020.txt  (+18 more)
data_imu/raw/train/: 00_30_11_020.pcd  00_30_11_020.txt  00_30_47_040.pcd  00_30_47_040.txt  00_30_57_020.pcd  (+438 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: traversablity_smoother_node.launch.py
log/: latest_build
scripts/: cloud_parse.py  dataset.py  datasetIMU.py  inspect_augmented_data.py  inspect_data.py  keras.py  lib_o3d_ros.py  play.py  pointnet.py  pointnet_curv.py  pointnet_imu_regression copy.ipynb  pointnet_imu_regression.ipynb  pointnetpp_regression.ipynb  publish_cvut_clouds.py  render_clouds.py  ros_infer.py  ros_infer_cvut.py  ros_infer_imu.py  ros_infer_imu_probab.py  tf2_sensor_msgs.py
src/: traversablity_smoother_node.cpp
(+20 files in other folders)
